example/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: example
  annotations:
    name: example
  labels:
    name: example
