example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: example
spec:
  selector:
    app: Example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
