example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  namespace: example
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - cluster.anhdv.dev 
      secretName: tls.cluster.anhdv.dev
  rules:
    - host: cluster.anhdv.dev
      http:
        paths:
          - path: /example
            backend:
              serviceName: example
              servicePort: 80
